@@ -41,7 +41,7 @@ if [[ -z "${METATRON_ENCODING}" ]]; then
 fi
 
 if [[ -z "${METATRON_MEM}" ]]; then
-  export METATRON_MEM="-Xms2048m -Xmx2048m -XX:MaxPermSize=512m"
+  export METATRON_MEM="-Xms2048m -Xmx2048m -XX:MaxMetaspaceSize=512m"
 fi
 
 JAVA_OPTS+=" ${METATRON_JAVA_OPTS} -Dfile.encoding=${METATRON_ENCODING} ${METATRON_MEM}"
